adicionando whats app

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Sobre Nós</a>
+              <a class="nav-link" href="#sobreNos">Sobre Nós</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -41,15 +41,16 @@
                 Nossas Redes
               </a>
               <ul class="dropdown-menu dropdown-menu-dark">
-                <li><a class="dropdown-item" href="#"> <i class="bi bi-instagram"></i> Instagram</a></li>
-                <li><a class="dropdown-item" href="#"> <i class="bi bi-facebook"></i> Facebook</a></li>
+                <li><a class="dropdown-item" target="_blank"href="https://www.instagram.com/elaebelaatelie/"> <i class="bi bi-instagram"></i> Instagram</a></li>
+                <li><a class="dropdown-item" href="https://wa.me/5511933842210?text=MENSAGEM" target="_blank">
+                <i class="bi bi-whatsapp"></i> WhatsApp</a></li>
 
               </ul>
             </li>
           </ul>
           <form class="d-flex mt-3" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-primary" type="submit">Search</button>
+            <button class="btn btn-dark" type="submit">Search</button>
           </form>
         </div>
       </div>
@@ -93,7 +94,7 @@
 
   <br><br><br><br><br><br>
 
-  <div class="clearfix container">
+  <div id="sobreNos" class="clearfix container">
     <img src="./src/images/elaebela.webp " class="col-md-6 float-md-end mb-3 ms-md-3" alt="...">
 
     <p>
@@ -149,9 +150,9 @@
   <footer class=" text-center text-white">
     <div class="container p-4 pb-0">
       <section class="mb-4">
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="bi bi-facebook"></i></a>
+        <a class="btn btn-outline-light btn-floating m-1" href="https://wa.me/5511933842210?text=MENSAGEM" target="_blank" role="button"><i class="bi bi-whatsapp"></i></a>
 
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="bi bi-instagram"></i></a>
+        <a class="btn btn-outline-light btn-floating m-1" target="_blank"href="https://www.instagram.com/elaebelaatelie/" role="button"><i class="bi bi-instagram"></i></a>
       </section>
     </div>
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
