adicionando mensagem do whatsapp

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               </a>
               <ul class="dropdown-menu dropdown-menu-dark">
                 <li><a class="dropdown-item" target="_blank"href="https://www.instagram.com/elaebelaatelie/"> <i class="bi bi-instagram"></i> Instagram</a></li>
-                <li><a class="dropdown-item" href="https://wa.me/5511933842210?text=MENSAGEM" target="_blank">
+                <li><a class="dropdown-item" href="https://wa.me/5511933842210?text=Olá%2C%20gostaria%20de%20saber%20mais%20sobre%20seus%20serviços%21" target="_blank">
                 <i class="bi bi-whatsapp"></i> WhatsApp</a></li>
 
               </ul>
@@ -150,7 +150,7 @@
   <footer class=" text-center text-white">
     <div class="container p-4 pb-0">
       <section class="mb-4">
-        <a class="btn btn-outline-light btn-floating m-1" href="https://wa.me/5511933842210?text=MENSAGEM" target="_blank" role="button"><i class="bi bi-whatsapp"></i></a>
+        <a class="btn btn-outline-light btn-floating m-1" href="https://wa.me/5511933842210?text=Olá%2C%20gostaria%20de%20saber%20mais%20sobre%20seus%20serviços%21" target="_blank" role="button"><i class="bi bi-whatsapp"></i></a>
 
         <a class="btn btn-outline-light btn-floating m-1" target="_blank"href="https://www.instagram.com/elaebelaatelie/" role="button"><i class="bi bi-instagram"></i></a>
       </section>
