--- a/index.html
+++ b/index.html
@@ -67,6 +67,18 @@
         aria-label="Slide 2"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
         aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+        aria-label="Slide 4"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+        aria-label="Slide 5"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5"
+        aria-label="Slide 6"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6"
+        aria-label="Slide 7"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="7"
+        aria-label="Slide 8"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="8"
+        aria-label="Slide 9"></button>
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
@@ -81,6 +93,31 @@
         <img src="./src/images/maiara.jpg" class="d-block w-100" alt="...">
 
       </div>
+      <div class="carousel-item">
+        <img src="./src/images/taina2.jpeg" class="d-block w-100" alt="...">
+
+      </div>
+      <div class="carousel-item">
+        <img src="./src/images/emily2.jpeg" class="d-block w-100" alt="...">
+
+      </div>
+      <div class="carousel-item">
+        <img src="./src/images/maiara2.jpeg" class="d-block w-100" alt="...">
+
+      </div>
+      <div class="carousel-item">
+        <img src="./src/images/taina3.jpeg" class="d-block w-100" alt="...">
+
+      </div>
+      <div class="carousel-item">
+        <img src="./src/images/emily3.jpeg" class="d-block w-100" alt="...">
+
+      </div>
+      <div class="carousel-item">
+        <img src="./src/images/maiara3.jpeg" class="d-block w-100" alt="...">
+
+      </div>
+
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
